Added a layer for response handling + refactoring